--- a/odoo18/labels/reports/report_reception_report_label.xml
+++ b/odoo18/labels/reports/report_reception_report_label.xml
@@ -1,26 +1,66 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<odoo>
-  <template id="report_reception_report_label" inherit_id="stock.report_reception_report_label">
-      <t t-if="quantity" t-set="qtys" t-value="[int(q) for q in quantity.split(',')]"/>
-      <t t-else="" t-set="qtys" t-value="[1 for q in range(len(docs))]"/>
-      <t t-call="web.basic_layout">
-          <div class="page">
-              <t t-foreach="range(len(docs))" t-as="index">
-                  <t t-set="move" t-value="docs[index]"/>
-                  <t t-set="qty" t-value="qtys[index]"/>
-                  <t t-set="source" t-value="move._get_source_document()"/>
-                  <t t-foreach="range(qty)" t-as="j">
-                      <div class="o_label_page o_label_dymo">
-                          <span t-out="move.product_id.display_name">Product Display Name</span> <br/>
-                          <span t-if="source" t-out="source.name">Source Name</span>
-                          <div class="address" t-if="move.picking_id and move.picking_id.partner_id"
-                              t-field="move.picking_id.partner_id"
-                              t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True}'/>
-                      </div>
-                  </t>
-              </t>
-          </div>
-      </t>
-  </template>
-</odoo>
- 
+<t t-name="stock.label_product_product_view">
+    <t t-debug="product_info"/>
+    
+    <!-- حلقة التكرار على كمية العناصر -->
+    <t t-foreach="quantity.items()" t-as="barcode_and_qty_by_product">
+        <t t-set="product" t-value="barcode_and_qty_by_product[0]"/>
+        
+        <!-- التحقق من قيمة x_studio_print قبل أي معالجة -->
+        <t t-if="product.x_studio_print">
+        
+            <!-- حلقة التكرار على معلومات المنتج -->
+            <t t-foreach="barcode_and_qty_by_product[1]" t-as="product_info">
+                <t t-set="barcode" t-value="product_info['barcode']"/>
+                <t t-set="currency_id" t-value="pricelist.currency_id or product.currency_id"/>
+                
+                <!-- حلقة التكرار على الكمية المطلوبة -->
+                <t t-foreach="range(product_info['quantity'])" t-as="qty">
+                    <t t-translation="off">
+
+<!-- ================ معالجة النص ================ -->
+<t t-set="display_name_trimmed" t-value="product_info['display_name_markup'][10:]"/>
+<t t-set="name_line_1" t-value="display_name_trimmed[:40]"/>
+<t t-set="name_line_2" t-value="display_name_trimmed[40:]"/>
+
+<!-- ================ بداية أوامر الطابعة (ZPL) ================ -->
+^XA
+^CI28
+^CWZ,E:TT0003M_.FNT
+
+<!-- طباعة اسم المنتج -->
+<t t-if="display_name_trimmed and name_line_2">
+    ^FT20,45^A@Z,30,20,E:TT0003M_.FNT^FH^FD<t t-out="name_line_1"/>^FS
+    ^FT20,75^A@Z,30,20,E:TT0003M_.FNT^FH^FD<t t-out="name_line_2"/>^FS
+</t>
+<t t-else="">
+    ^FT20,45^A@Z,30,20,E:TT0003M_.FNT^FH^FD<t t-out="display_name_trimmed"/>^FS
+</t>
+
+<!-- طباعة السعر -->
+<t t-if="price_included">
+    ^FT220,85^A0N,25,20^FH^FD
+    <t t-if="currency_id.position == 'after'">
+        <t t-esc="pricelist._get_product_price(product, 1, currency_id)" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;: 2}"/><t t-esc="currency_id.symbol"/>
+    </t>
+    <t t-if="currency_id.position == 'before'">
+        <t t-esc="currency_id.symbol"/><t t-esc="pricelist._get_product_price(product, 1, currency_id)" t-options="{&quot;widget&quot;: &quot;float&quot;, &quot;precision&quot;: 2}"/>
+    </t>
+    ^FS
+</t>
+
+<!-- طباعة الباركود -->
+<t t-if="barcode">
+    ^FO20,90^BY3
+    ^BCN,90,Y,N,N
+    ^FD<t t-out="barcode"/>^FS
+</t>
+
+^XZ
+
+                    </t>
+                </t>
+            </t>
+        </t>
+        <!-- نهاية الشرط t-if -->
+    </t>
+</t>
